--- a/tv.html
+++ b/tv.html
@@ -14,12 +14,14 @@
   <a href="weiteres.html">Weiteres</a>
 </div>
 
-<h2 style="text-align:center; margin-top:50px;" id="time"></h2>
-<h3 style="text-align:center;">Zeitplan</h3>
+<div style="text-align:center; margin-top:50px;">
+  <h2 id="time" style="font-size:2em;"></h2>
+  <h3 style="margin-top:20px;">Zeitplan</h3>
 
-<div style="width:200px; margin:20px auto;">
-  <label><input type="checkbox"> Im Zeitplan</label><br>
-  <label><input type="checkbox"> Nicht im Zeitplan</label>
+  <div class="checkbox-container">
+    <label><input type="checkbox"> Im Zeitplan</label><br>
+    <label><input type="checkbox"> Nicht im Zeitplan</label>
+  </div>
 </div>
 
 <script>
