--- a/index.html
+++ b/index.html
@@ -1,311 +1,47 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-<meta charset="UTF-8">
-<title>GyRa Technik</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>GyRa Technik</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Content Security Policy für sichere Firebase-Einbindung -->
-<meta http-equiv="Content-Security-Policy" content="
-  default-src 'self' https://www.gstatic.com https://*.firebaseio.com;
-  script-src 'self' https://www.gstatic.com https://*.firebaseio.com 'unsafe-inline';
-  style-src 'self' 'unsafe-inline';
-">
+  <!-- Firebase -->
+  <script type="module" src="app.js"></script>
 
-<style>
-body {
-  margin:0;
-  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
-  background:#f5f5f7;
-  color:#000;
-}
-a { text-decoration:none; color:#000; }
-
-.topbar {
-  display:flex;
-  justify-content:flex-end;
-  gap:20px;
-  background:#0a1f3d;
-  padding:15px;
-  color:white;
-  position:fixed;
-  width:100%;
-  top:0;
-  z-index:100;
-}
-.topbar a { color:white; font-weight:bold; }
-
-section { display:none; padding-top:100px; text-align:center; }
-
-.login-box {
-  background: rgba(255,255,255,0.3);
-  backdrop-filter: blur(20px);
-  padding:40px;
-  border-radius:20px;
-  width:300px;
-  margin:150px auto;
-}
-.login-box input {
-  width:90%;
-  padding:10px;
-  margin:10px 0;
-  border-radius:10px;
-  border:none;
-  backdrop-filter: blur(10px);
-  background: rgba(255,255,255,0.4);
-}
-.login-box button {
-  padding:10px 20px;
-  border:none;
-  border-radius:10px;
-  font-weight:bold;
-  color:white;
-  background: rgba(0,128,0,0.8);
-  cursor:pointer;
-}
-#errorMsg { color:red; margin-top:10px; display:none; }
-#offlineMsg { color:orange; margin-top:10px; display:none; }
-
-/* Hauptseite */
-#home h1 { font-size:3em; margin-top:20px; }
-#home h2 { font-size:2em; }
-#home h3 { font-size:1.2em; margin-bottom:50px; }
-
-/* Inventar */
-.add-btn { padding:10px 20px; margin:10px; background:#0d6f36; color:white; border:none; border-radius:10px; cursor:pointer; }
-input[type=text], input[type=number], select { padding:8px; margin:5px; border-radius:10px; border:none; backdrop-filter: blur(10px); background: rgba(255,255,255,0.4);}
-.table-container {
-  width:90%;
-  margin:20px auto;
-  overflow-x:auto;
-  backdrop-filter: blur(10px);
-  background: rgba(255,255,255,0.2);
-  border-radius:15px;
-  padding:15px;
-}
-table { width:100%; border-collapse:collapse; }
-th, td { padding:10px; text-align:left; }
-tr:nth-child(even) { background: rgba(255,255,255,0.1);}
-button.edit-btn, button.del-btn { padding:5px 10px; margin:2px; border:none; border-radius:5px; cursor:pointer; }
-
-.popup {
-  display:none;
-  position: fixed;
-  top:20%;
-  left:50%;
-  transform:translate(-50%,-20%);
-  background: rgba(255,255,255,0.3);
-  backdrop-filter: blur(20px);
-  padding:20px;
-  border-radius:20px;
-  text-align:center;
-  z-index:100;
-}
-.popup input, .popup select { width:80%; margin:5px 0;}
-.popup button { margin-top:10px; padding:8px 15px; cursor:pointer; background:#0d6f36; color:white; border:none; border-radius:10px;}
-</style>
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- Login -->
-<section id="login">
-  <div class="login-box">
-    <h2>GyRa Technik Login</h2>
-    <input type="email" id="email" placeholder="Email">
-    <input type="password" id="password" placeholder="Passwort">
+<!-- LOGIN -->
+<div id="loginScreen" class="center">
+  <div class="loginBox">
+    <h2>Login</h2>
+    <input id="email" type="text" placeholder="E-Mail oder 1">
+    <input id="password" type="password" placeholder="Passwort oder 1">
     <button id="loginBtn">Anmelden</button>
-    <div id="errorMsg">Falsch!</div>
-    <div id="offlineMsg">Offline - Firebase nicht verfügbar</div>
+    <div id="loginError">Falsch</div>
   </div>
-</section>
+</div>
 
-<!-- Hauptseite -->
-<section id="home">
-  <div class="topbar">
-    <a href="#" onclick="showSection('home')">Home</a>
-    <a href="#" onclick="showSection('inventar')">Inventar</a>
+<!-- HAUPTSEITE -->
+<div id="mainScreen">
+  <div class="topBar">
+    <button id="newBtn">Neu</button>
   </div>
-  <h2 id="time"></h2>
-  <h3 id="date"></h3>
-  <h1>GyRa Technik</h1>
-</section>
 
-<!-- Inventar -->
-<section id="inventar">
-  <div class="topbar">
-    <a href="#" onclick="showSection('home')">Home</a>
-    <a href="#" onclick="showSection('inventar')">Inventar</a>
+  <div id="cardGrid"></div>
+</div>
+
+<!-- POPUP -->
+<div id="popupOverlay">
+  <div class="popup">
+    <h3>Neuer Eintrag</h3>
+    <input id="popupTitle" type="text" placeholder="Überschrift">
+    <textarea id="popupText" placeholder="Text"></textarea>
+    <button id="savePost">Speichern</button>
   </div>
-  <h1 style="margin-top:70px;">Inventar</h1>
-  <input type="text" id="search" placeholder="Suche...">
-  <button class="add-btn" id="addBtn">Hinzufügen</button>
-  <div class="table-container">
-    <table id="inventarTable">
-      <tr><th>Name</th><th>Anzahl</th><th>Gruppe</th><th>Aktionen</th></tr>
-    </table>
-  </div>
-  <div class="popup" id="popup">
-    <h2>Eintrag hinzufügen</h2>
-    <input id="name" placeholder="Name">
-    <input id="amount" placeholder="Anzahl">
-    <select id="group">
-      <option>Kabel</option>
-      <option>Pulte</option>
-      <option>Licht</option>
-      <option>Ton</option>
-      <option>Materialien</option>
-      <option>Effekte</option>
-    </select>
-    <button id="saveItem">Speichern</button>
-  </div>
-</section>
-
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getDatabase, ref, push, set, onValue, remove } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
-import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-
-let firebaseAvailable = true;
-let app, db, auth;
-try {
-  const firebaseConfig = {
-    apiKey: "AIzaSyA77Epd0AXYz41c47nXuJHP2EKqWbuneb4",
-    authDomain: "gyraevent.firebaseapp.com",
-    databaseURL: "https://gyraevent-default-rtdb.europe-west1.firebasedatabase.app",
-    projectId: "gyraevent",
-    storageBucket: "gyraevent.firebasestorage.app",
-    messagingSenderId: "1055376556998",
-    appId: "1:1055376556998:web:cf91c05b247fcd8450a8c7"
-  };
-  app = initializeApp(firebaseConfig);
-  db = getDatabase(app);
-  auth = getAuth(app);
-} catch(e){
-  firebaseAvailable = false;
-  document.getElementById("offlineMsg").style.display="block";
-}
-
-// Sections
-const loginSection = document.getElementById("login");
-const homeSection = document.getElementById("home");
-const inventarSection = document.getElementById("inventar");
-
-// Login
-const loginBtn = document.getElementById("loginBtn");
-const errorMsg = document.getElementById("errorMsg");
-
-loginBtn.addEventListener("click", ()=>{
-  const email = document.getElementById("email").value.trim();
-  const password = document.getElementById("password").value.trim();
-
-  // Admin 1/1
-  if(email === "1" && password === "1"){
-    showSection("home");
-    return;
-  }
-
-  if(!firebaseAvailable){
-    document.getElementById("offlineMsg").style.display="block";
-    return;
-  }
-
-  signInWithEmailAndPassword(auth, email, password)
-  .then(()=> showSection("home"))
-  .catch(()=> {
-    errorMsg.style.display="block";
-    setTimeout(()=>errorMsg.style.display="none",3000);
-  });
-});
-
-// Show Section
-function showSection(name){
-  loginSection.style.display="none";
-  homeSection.style.display="none";
-  inventarSection.style.display="none";
-  if(name==="home") homeSection.style.display="block";
-  if(name==="inventar") inventarSection.style.display="block";
-  if(name==="login") loginSection.style.display="block";
-}
-
-// Uhrzeit
-function updateTime() {
-  const now = new Date();
-  document.getElementById("time").innerText = now.toLocaleTimeString();
-  document.getElementById("date").innerText = now.toLocaleDateString();
-}
-setInterval(updateTime,1000);
-updateTime();
-
-// Inventar
-const table = document.getElementById("inventarTable");
-const addBtn = document.getElementById("addBtn");
-const popup = document.getElementById("popup");
-const saveBtn = document.getElementById("saveItem");
-const searchInput = document.getElementById("search");
-let editKey = null;
-
-if(firebaseAvailable){
-  addBtn.addEventListener("click", ()=> popup.style.display="block");
-
-  saveBtn.addEventListener("click", ()=>{
-    const name = document.getElementById("name").value.trim();
-    const amount = document.getElementById("amount").value.trim();
-    const group = document.getElementById("group").value;
-    if(!name || !amount) return;
-
-    if(editKey){
-      set(ref(db,"inventar/"+editKey), {name,amount,group});
-      editKey=null;
-    } else {
-      const newRef = push(ref(db,"inventar"));
-      set(newRef, {name,amount,group});
-    }
-    popup.style.display="none";
-    document.getElementById("name").value="";
-    document.getElementById("amount").value="";
-  });
-
-  const dbRef = ref(db,"inventar");
-  function loadTable(){
-    onValue(dbRef, snapshot=>{
-      const filter = searchInput.value.toLowerCase();
-      table.innerHTML="<tr><th>Name</th><th>Anzahl</th><th>Gruppe</th><th>Aktionen</th></tr>";
-      snapshot.forEach(child=>{
-        const data = child.val();
-        if(data.name.toLowerCase().includes(filter)){
-          const row = table.insertRow();
-          row.insertCell(0).innerText = data.name;
-          row.insertCell(1).innerText = data.amount;
-          row.insertCell(2).innerText = data.group;
-          const actionCell = row.insertCell(3);
-
-          const editBtn = document.createElement("button");
-          editBtn.className="edit-btn";
-          editBtn.innerText="Bearbeiten";
-          editBtn.onclick = ()=> {
-            document.getElementById("name").value=data.name;
-            document.getElementById("amount").value=data.amount;
-            document.getElementById("group").value=data.group;
-            popup.style.display="block";
-            editKey = child.key;
-          };
-          const delBtn = document.createElement("button");
-          delBtn.className="del-btn";
-          delBtn.innerText="Löschen";
-          delBtn.onclick = ()=> remove(ref(db,"inventar/"+child.key));
-          actionCell.appendChild(editBtn);
-          actionCell.appendChild(delBtn);
-        }
-      });
-    });
-  }
-  loadTable();
-  searchInput.addEventListener("input", loadTable);
-}
-
-// Startseite
-showSection("login");
-</script>
+</div>
 
 </body>
 </html>
