--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
   <title>GyRa Technik</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Firebase -->
-  <script type="module" src="app.js"></script>
-
-  <!-- Styles -->
   <link rel="stylesheet" href="style.css">
+  <script type="module" src="app.js"></script>
 </head>
 <body>
 
@@ -37,7 +34,7 @@
 <div id="popupOverlay">
   <div class="popup">
     <h3>Neuer Eintrag</h3>
-    <input id="popupTitle" type="text" placeholder="Überschrift">
+    <input id="popupTitle" placeholder="Überschrift">
     <textarea id="popupText" placeholder="Text"></textarea>
     <button id="savePost">Speichern</button>
   </div>
