--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <title>Login</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>GyRa Technik</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="login">
+<div class="login-box">
   <h1>GyRa Technik</h1>
-
-  <input id="email" type="email" placeholder="E-Mail">
   <input id="password" type="password" placeholder="Passwort">
-
   <button id="loginBtn">Anmelden</button>
-
-  <div id="error" class="error hidden">Falsch</div>
+  <div id="error" class="error hidden">Falsches Passwort</div>
 </div>
 
 <script type="module" src="app.js"></script>
