--- a/home.html
+++ b/home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <title>GyRa</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>GyRa Technik - Hauptseite</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
